--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {
 }
 #myCanvas
 {
+	margin-top: 30px;
 	border-width:10px;
 	background-color: white; 
 	border-style:ridge;
@@ -24,7 +25,7 @@ h1,h4
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<title>Moving Rover On</title>
 </head>
-<body onload = "add()" ;>
+<body onload = "add();" >
 
 
 <center>
